[package]
name = "NtDebugActiveProcess"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
name = "NtDebugActiveProcess"
path = "src/main.rs"

[dependencies]
noldr = { git = "https://github.com/Teach2Breach/noldr.git", branch = "main" }
windows = { version = "0.58.0", features = ["Win32_System_SystemServices", "Win32_System_ProcessStatus", "Win32_System_Threading"] }
winapi = { version = "0.3.9", features = ["winbase", "processthreadsapi", "errhandlingapi", "libloaderapi", "psapi", "debugapi"]}
litcrypt = "0.3.0"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort" 