[package]
name = "RtlQueryEnvironmentVariable_U"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_WindowsProgramming"
] }
ntapi = "0.4.1"
winapi = "0.3.9"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
